cabal-version:   3.0
name:            tasty-coverage
-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:  +-+------- breaking API changes
--               | | +----- non-breaking API additions
--               | | | +--- code changes with no API change
version:         0.1.0.0
synopsis:        Ingredient for tasty which generates per-test coverage reports
description:     An ingredient for the tasty testing framework which allows to generate per-test coverage reports.
                 For every test "foo" a file "foo.PASSED.tix" or "foo.FAILED.tix" is generated, depending on whether the test passed or failed. 
license:         BSD-3-Clause
license-file:    LICENSE
homepage:        https://github.com/BinderDavid/tasty-coverage
bug-reports:     https://github.com/BinderDavid/tasty-coverage/issues
copyright:       David Binder, 2023
maintainer:      david.binder@uni-tuebingen.de
author:          David Binder
category:        Testing
build-type:      Simple
extra-doc-files:
    CHANGELOG.md
    README.md
tested-with:     GHC == 9.2.7 || ==9.4.5 || ==9.6.2

source-repository head
  type:          git
  location:      git@github.com:BinderDavid/tasty-coverage.git

library
    exposed-modules:  Test.Tasty.CoverageReporter
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.18.0.0,
        tasty ^>=1.4,
        optparse-applicative ^>=0.18,
        hpc ^>=0.6,
        filepath ^>=1.4.100

test-suite tasty-coverage-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall -fhpc
    build-depends:
        base ^>=4.18.0.0,
        tasty ^>=1.4,
        tasty-hunit ^>=0.10,
        tasty-test
