cabal-version:   3.0
name:            tasty-coverage
version:         0.1.3.0
license:         BSD-3-Clause
license-file:    LICENSE
copyright:       David Binder, 2023
maintainer:      david.binder@uni-tuebingen.de
author:          David Binder
tested-with:     ghc ==9.2.7 || ==9.4.5 || ==9.6.2 || ==9.8.2 || ==9.10.1
homepage:        https://github.com/BinderDavid/tasty-coverage
bug-reports:     https://github.com/BinderDavid/tasty-coverage/issues
synopsis:
    Ingredient for tasty which generates per-test coverage reports

description:
    An ingredient for the tasty testing framework which allows to generate per-test coverage reports.
    For every test "foo" a file "foo.PASSED.tix" or "foo.FAILED.tix" is generated, depending on whether the test passed or failed.

category:        Testing
build-type:      Simple
extra-doc-files:
    CHANGELOG.md
    CONTRIBUTING.md
    README.md

extra-source-files:
    test/golden/UnitTests.testFive.PASSED.tix.golden
    test/golden/UnitTests.testFive'.PASSED.tix.golden
    test/golden/UnitTests.testFour.FAILED.tix.golden
    test/golden/UnitTests.testOne.PASSED.tix.golden
    test/golden/UnitTests.testThree.FAILED.tix.golden
    test/golden/UnitTests.testTwo.PASSED.tix.golden
    

source-repository head
    type:     git
    location: git@github.com:BinderDavid/tasty-coverage.git

common deps
    build-depends:
        base >=4.16 && <4.21,
        tasty >= 1.4 && < 1.6

library
    import:           deps
    exposed-modules:  Test.Tasty.CoverageReporter
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        filepath >=1.3.8 && <=1.5,
        hpc >=0.6 && <0.8,
        containers >=0.6 && <0.8,

flag coverage {
  Description: Enable coverage
  Default:     False
  Manual:      False
}

executable tasty-coverage-example
    import:           deps
    main-is:          Main.hs
    hs-source-dirs:   example
    default-language: Haskell2010
    ghc-options:      -Wall
    if flag(coverage)
        ghc-options:  -fhpc
    build-depends:
        tasty-hunit ^>=0.10,
        tasty-coverage

test-suite tasty-coverage-test
    import:             deps
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    build-tool-depends: tasty-coverage:tasty-coverage-example
    hs-source-dirs:     test
    default-language:   Haskell2010
    -- Since "coverage" is an automatic flag, the following forces
    -- the flag to be enabled if we are trying to build this component.
    -- Cf.: https://github.com/haskell/cabal/issues/9251
    if !flag(coverage)
       build-depends: base < 0
    ghc-options:        -Wall
    build-depends:
        filepath >=1.3.8 && <=1.5,
        hpc >=0.6 && < 0.8,
        tasty-hunit ^>=0.10,
        process ^>=1.6,
