cabal-version:      3.0
name:               tasty-test
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             David Binder
maintainer:         david.binder@uni-tuebingen.de
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Test.Tasty.CoverageReporter
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0,
                      tasty ^>= 1.4,
                      optparse-applicative ^>= 0.18,
                      hpc ^>= 0.6,
                      filepath ^>= 1.4.100
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite tasty-test-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    ghc-options:      -fhpc
    build-depends:
        base ^>=4.18.0.0,
        tasty ^>= 1.4,
        tasty-hunit ^>= 0.10,
        tasty-test
